--- a/weddingCard.html
+++ b/weddingCard.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Wedding Invitation</title>
+  <title>Mani ❤️ Indhu Wedding Card</title>
   <style>
     body {
       font-family: 'Poppins', sans-serif;
@@ -848,6 +848,7 @@ saveBtn.addEventListener("click", async () => {
 </script>
 </body>
 </html>
+
 
 
 
