--- a/weddingCard.html
+++ b/weddingCard.html
@@ -184,15 +184,11 @@
       header h1{ font-size:1.9rem }
       .top-controls{ left:8px } .lang-toggle{ right:8px }
     }
-
-    /* small helper text under music controls */
-    .music-info{ font-size:0.85rem; color:var(--muted); margin-left:6px }
-    .hidden{ display:none!important }
   </style>
 </head>
 <body>
 
-  <!-- TOP CONTROLS: Theme + Music upload/URL + Play/Pause -->
+  <!-- TOP CONTROLS: Theme -->
   <div class="top-controls" aria-hidden="false">
     <div class="btn small" id="theme-toggle" title="Toggle dark / light mode">🌙</div>
   </div>
@@ -654,6 +650,7 @@ saveBtn.addEventListener("click", async () => {
 </script>
 </body>
 </html>
+
 
 
 
