--- a/weddingCard.html
+++ b/weddingCard.html
@@ -318,7 +318,7 @@
     <a class="map-link" href="https://maps.app.goo.gl/Nzt3ZYWVp2fxScz36" target="_blank" id="venue-map">View Venue</a>
   </div>
 </section>
-<section>
+<section style="display:none">
   <h2 id="photos-title">Meet the Bride & Groom</h2>
   <div class="carousel">
   <div class="carousel-track">
@@ -650,6 +650,7 @@ saveBtn.addEventListener("click", async () => {
 </script>
 </body>
 </html>
+
 
 
 
