--- a/weddingCard.html
+++ b/weddingCard.html
@@ -219,7 +219,7 @@
   <p id="invite-text">We joyfully invite you to our wedding celebration</p>
   <p id="date-text"><b>25th November 2025</b></p>
 </header>
-<section>
+<section style="display:none">
   <h2>📸 Upload Your Selfie to Mark Attendance</h2>
   <div class="upload-card">
     <input type="file" id="photo" accept="image/*" capture="user" required />
@@ -650,6 +650,7 @@ saveBtn.addEventListener("click", async () => {
 </script>
 </body>
 </html>
+
 
 
 
