--- a/weddingCard.html
+++ b/weddingCard.html
@@ -370,7 +370,7 @@
     <div class="carousel-track">
       <!-- Replace YouTube links or MP4 file paths below -->
       <iframe 
-        src="video_1" 
+        src="video_1.mp4" 
         title="Cartoon Invitation 1"
         frameborder="0"
         allowfullscreen
@@ -378,7 +378,7 @@
       </iframe>
 
       <iframe 
-        src="video_2"
+        src="video_2.mp4"
         title="Cartoon Invitation 2"
         frameborder="0"
         allowfullscreen
@@ -386,7 +386,7 @@
       </iframe>
 
       <iframe 
-        src="video_3"
+        src="video_3.mp4"
         title="Cartoon Invitation 3"
         frameborder="0"
         allowfullscreen
@@ -764,6 +764,7 @@ setInterval(() => {
 </script>
 </body>
 </html>
+
 
 
 
