--- a/weddingCard.html
+++ b/weddingCard.html
@@ -278,10 +278,10 @@
 </section>
 
 <section>
-  <h2 id="homes-title">Our Homes</h2>
+  <h2 id="homes-title">Our Home</h2>
   <div class="details">
     <!-- Bride's Home -->
-    <div class="card">
+    <div class="card" style="display:none">
       <h3 id="bride-home">🏠 Bride’s Home</h3>
       <p id="bride-namee">Indhu Pydi</p>
       <p id="bride-father">Father: Janardhana Rao</p>
@@ -419,7 +419,7 @@
       groomNamee: "Mani Yenni",
       invite: "We joyfully invite you to our wedding celebration",
       date: "25th November 2025",
-      homes: "Our Homes",
+      homes: "Our Home",
       brideHome: "🏠 Bride’s Home",
       brideFather: "Father: Janardhana Rao",
       brideReception: "Reception: 23 Nov, 8:00 AM",
@@ -443,7 +443,7 @@
       groomNamee: "మణి ఎన్ని",
       invite: "మా వివాహ వేడుకకు మిమ్మల్ని ఆనందంతో ఆహ్వానిస్తున్నాము",
       date: "25 నవంబర్ 2025",
-      homes: "మా ఇల్లులు",
+      homes: "మా ఇల్లు",
       brideHome: "🏠 వధువు ఇల్లు",
       brideFather: "తండ్రి: జనార్ధన రావు",
       brideReception: "స్వాగతం: 23 నవంబర్, ఉదయం 8:00",
@@ -784,6 +784,7 @@ document.addEventListener("DOMContentLoaded", function () {
 </script>
 </body>
 </html>
+
 
 
 
