--- a/weddingCard.html
+++ b/weddingCard.html
@@ -240,9 +240,9 @@
     <span>❤️</span>
   </div>
   <h1>
-    <span class="name" id="bride-name">Indhu</span>
+    <span class="name" id="bride-name">Mani</span>
     <span class="and">❤️</span>
-    <span class="name" id="groom-name">Mani</span>
+    <span class="name" id="groom-name">Indhu</span>
   </h1>
   <p id="invite-text">We joyfully invite you to our wedding celebration</p>
   <p id="date-text"><b>25th November 2025</b></p>
@@ -413,8 +413,8 @@
 
   const translations = {
     en: {
-      brideName: "Indhu",
-      groomName: "Mani",
+      brideName: "Mani",
+      groomName: "Indhu",
       brideNamee: "Indhu Pydi",
       groomNamee: "Mani Yenni",
       invite: "We joyfully invite you to our wedding celebration",
@@ -784,6 +784,7 @@ document.addEventListener("DOMContentLoaded", function () {
 </script>
 </body>
 </html>
+
 
 
 
